--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="menu_item_delete_document">Delete</string>
 
 	<string name="template_size">%1$d x %2$d</string>
+	<string name="template_likes">{fa-thumbs-up} %1$d</string>
 	<string name="btn_create">Create</string>
 	<string name="btn_cancel">Cancel</string>
 	<string name="btn_rename">Rename</string>
