--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 	<string name="app_name">FirebaseSketch</string>
 	<string name="title_documents">Documents</string>
-	<string name="item_login">Login</string>
+	<string name="item_login">Account</string>
 	<string name="item_create_document">Create document</string>
 	<string name="menu_item_rename_document">Rename</string>
 	<string name="menu_item_delete_document">Delete</string>
